--- a/RelicsSeeker.vcxproj.filters
+++ b/RelicsSeeker.vcxproj.filters
@@ -20,9 +20,6 @@
     <ClCompile Include="src\backpack.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\event.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="src\item.c">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -41,12 +38,15 @@
     <ClCompile Include="test\test.c">
       <Filter>Test</Filter>
     </ClCompile>
+    <ClCompile Include="src\encyclopedia.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\guide.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\backpack.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="include\event.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\item.h">
@@ -59,6 +59,15 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\shop.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\commontypes.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\encyclopedia.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\guide.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
